--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -2,7 +2,7 @@
     font-family: "Bebas Neue", sans-serif;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: space-between;
     height: 70px;
     max-height: 80px;
     font-size: 24px;
@@ -12,6 +12,30 @@
     width: 100%;
     position: fixed;
     top:0;
+    list-style-type: none;
+    align-items: center;
+}
+
+.nav-logo-div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 20px;
+}
+
+.nav-logo{
+    max-height:40px;
+}
+
+.nav-linkss{
+    font-family: "Bebas Neue", sans-serif;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    height: 70px;
+    max-height: 80px;
+    font-size: 24px;
+    overflow:hidden;
     list-style-type: none;
     align-items: center;
 }
