--- a/client/src/components/Goal.css
+++ b/client/src/components/Goal.css
@@ -23,7 +23,7 @@
   border-radius: 60px;
   display: flex;
   width: 350px;
-  height: 110px;
+  height: 160px;
   min-height: 100px;
   padding: 20px;
   align-items: center;
@@ -33,6 +33,7 @@
 }
 
 .goal-d{
+  margin-top: 0;
   font-size: 19px;
   text-align: center;
 }
@@ -96,9 +97,20 @@
   background-color: white;
   box-shadow: 0 2px 10px var(--black-a7);
 }
+
 .IconButton:hover {
   background-color: var(--violet-3);
 }
+
 .IconButton:focus {
   box-shadow: 0 0 0 2px black;
+}
+
+.edit-goal{
+  margin-top: 20px;
+  border: 0;
+}
+
+.edit-goal-del{
+  font-family: "Nanum Gothic", sans-serif;
 }
