--- a/client/src/components/Goal.css
+++ b/client/src/components/Goal.css
@@ -114,3 +114,48 @@
 .edit-goal-del{
   font-family: "Nanum Gothic", sans-serif;
 }
+
+#descript-go{
+  font-family: "Nanum Gothic", sans-serif;
+}
+
+.titles-goals{
+  font-family: "Nanum Gothic", sans-serif;
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+
+.edit-goal-cancel {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  border: 0;
+  font-size: 20px;
+  line-height: 1;
+  font-weight: 500;
+  font-family: "Bebas Neue", sans-serif;
+  background-color: rgb(255, 90, 19, .1);
+  color:#FF5A13;
+  margin-bottom: 20px;
+  float:left;
+  width:120px;
+  padding: 8 15px;
+  height: 35px;
+}
+
+.edit-goal-cancel:hover {
+  background-color: rgb(255, 90, 19, .3);
+}
+
+.Button.green {
+  font-family: "Bebas Neue", sans-serif;
+  background-color: rgb(255, 90, 19, 1);
+  color: white;
+}
+.Button.green:hover {
+  background-color: rgb(255, 90, 19, .5);
+}
+.Button.green:focus {
+  box-shadow: 0 0 0 2px #FF5A13;
+}
