--- a/client/src/components/Teams.css
+++ b/client/src/components/Teams.css
@@ -1,6 +1,6 @@
 .team-page{
     margin-top: 7%;
-    margin-bottom: 12%;
+    margin-bottom: 10%;
 }
 
 .teams-sections{
@@ -67,4 +67,43 @@
     flex-direction: row;
     justify-content: space-evenly;
     margin-top: 10px;
+}
+
+.create-join{
+    text-align: center;
+    font-family: "Nanum Gothic", sans-serif;
+    color: #FF5A13;
+}
+
+.create-join:hover{
+    color: #000;
+}
+
+.an-update{
+    font-family: "Nanum Gothic", sans-serif;
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
+    width:100%;
+    max-height:100%;
+    text-align: left;
+    margin-top: 0;
+}
+
+.update-title{
+    font-weight: bold;
+    text-wrap: wrap;
+    font-size: 18px;
+}
+
+.update-name{
+    text-wrap: wrap;
+    font-size: 14px;
+    color: #8f8f8f;
+}
+
+.update-note{
+    margin-top: 10px;;
+    text-wrap: wrap;
+    font-size: 16px;
 }
