--- a/client/src/components/ProfilePage.css
+++ b/client/src/components/ProfilePage.css
@@ -278,3 +278,16 @@
   .Button-add:hover {
     background-color: rgb(255, 90, 19, .3);
   }
+
+  .add-pfp{
+    padding:0;
+    font-size: 20px;
+    color:white;
+    background-color: #FF5A13;
+    border: 0;
+    height:20px;
+    width: 20px;
+    line-height: 20px;
+    border-radius: 50%;
+    align-self: self-end;
+  }
