--- a/client/src/components/GoalsPage.css
+++ b/client/src/components/GoalsPage.css
@@ -55,3 +55,10 @@
 .dateSS{
   margin-right: 5px;
 }
+
+.adding2{
+  margin: 0 15.6%;
+  background: white;
+  padding: 30px;
+  border-radius: 4px;
+}
